[gd_scene load_steps=11 format=3 uid="uid://q7td0f30w7d7"]

[ext_resource type="Script" path="res://entities/npc/npc.gd" id="1_2ilwj"]
[ext_resource type="SpriteFrames" uid="uid://dr61pw02acu0j" path="res://entities/npc/character_first_fella/first_fella_animations.tres" id="2_y07hq"]
[ext_resource type="Script" path="res://globals/states/state_machine.gd" id="12_61g6a"]
[ext_resource type="Script" path="res://entities/npc/states/npc_move.gd" id="13_e6hhg"]
[ext_resource type="Script" path="res://entities/npc/states/npc_movement_component.gd" id="13_qcxui"]
[ext_resource type="Script" path="res://entities/npc/states/npc_idle.gd" id="14_8tvn8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ka3vq"]
radius = 8.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sv6xx"]
radius = 24.0
height = 64.0

[sub_resource type="Animation" id="Animation_4enb7"]
resource_name = "fade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0003, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivnwa"]
_data = {
"fade": SubResource("Animation_4enb7")
}

[node name="NPC" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 2
motion_mode = 1
script = ExtResource("1_2ilwj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_y07hq")
animation = &"idle_DOWN"

[node name="PlayerShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ka3vq")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("12_61g6a")
starting_state = NodePath("move")

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("13_e6hhg")
idle_state = NodePath("../idle")
animation_name = "run"

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state")]
script = ExtResource("14_8tvn8")
move_state = NodePath("../move")
animation_name = "idle"

[node name="Timer" type="Timer" parent="state_machine/idle"]

[node name="move_component" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("13_qcxui")
parent = NodePath("..")

[node name="InteractionArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CapsuleShape2D_sv6xx")

[node name="TargetMarker" type="Polygon2D" parent="."]
position = Vector2(-3.8147e-06, -24)
scale = Vector2(0.0833333, 0.2)
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(0, 0, 48, -40, -48, -40)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TargetMarker"]
libraries = {
"": SubResource("AnimationLibrary_ivnwa")
}

[connection signal="timeout" from="state_machine/idle/Timer" to="state_machine/idle" method="_on_timer_timeout"]
